--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
@@ -16,6 +16,10 @@
     box-shadow: inset 0 1px rgba(255,255,255,0.19);
     .button-variant(white; #20b61f; #1ba31b);
 }
+.btn-primary {
+    background-color: #F6912B;
+    border-color: #F6912B;
+}
 
 .btn-slideshow {
     border: none;
