Pop up image panel  load fix, search  box  position fix.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -1,7 +1,7 @@
 ﻿<style>
     .banner-container {
         position: relative;
-        z-index: 9999999;
+        z-index: 99;
     }
     .fixed-top {
         position: fixed;
