--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -20,7 +20,10 @@ a {
     list-style-image: url(../images/question-mark.jpg);
 }
 
-
+.form-horizontal>.search-input{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
 .form-group {
     margin: 0;
     padding: 3px 0px;
@@ -62,7 +65,7 @@ a {
 
 .search-input {
     background-color: #f5f5f5;
-    width: 100%;
+    width: 80%;
 }
 
 .form-control {
