--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -2,9 +2,6 @@
     <div class="input-group" id="adv-search">
         
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form">
-
-            
-
             <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Ask here" id="title" 
                [(ngModel)]="questionVM.title" required name="title"  #title="ngModel"  (keyup)=filterQuestions() />
 
@@ -29,7 +26,7 @@
 
                             <div class="question-components">
                                 <label> Categories</label>
-                                <select class="form-control catagory-dropdown" id="Category"  required  [(ngModel)]="questionVM.categoryId" name="category" #category="ngModel">
+                                <select class="form-control catagory-dropdown" id="category"  required  [(ngModel)]="questionVM.categoryId" name="category" #category="ngModel">
                                     <option *ngFor="let category of categories" [value]="category.id">
                                         {{category.name}}
                                     </option>
