--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -3,13 +3,13 @@
 
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form">
 
-            <div [hidden]="title.valid || title.pristine"
+            <div [hidden]="titleName.valid || titleName.pristine"
                  class="alert alert-danger">
                 Please type your question and then click ask!!
             </div>
 
             <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Ask here" id="title"
-                   [(ngModel)]="questionVM.title" required name="title" #title="ngModel" (keyup)=filterQuestions() />
+                   [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keyup)=filterQuestions() />
 
             
 
@@ -29,7 +29,7 @@
 
                             <div class="question-components">
                                 <label> Categories {{questionVM.categoryId}} {{ questionVM.title}}</label>
-                                <select class="form-control catagory-dropdown" id="Category" required [(ngModel)]="questionVM.categoryId" name="category" #category="ngModel">
+                                <select class="form-control catagory-dropdown" id="Category" required [(ngModel)]="categoryID" name="category" #category="ngModel">
                                     <option *ngFor="let category of categories" [value]="category.id">
                                         {{category.name}}
                                     </option>
@@ -39,12 +39,15 @@
                                 </div>
                             </div>
                             <div class="question-components">
-                                <ck-editor  id="details" name="details" ckeditorContent={{questionVM.body}}></ck-editor>
+                                <ckeditor [(ngModel)]="body" [ngModelOptions]="{standalone: true}"
+                                          [config]="{ removeButtons : 'Outdent,Indent,About,SpecialChar,Styles,Format,Source,NumberedList,BulletedList,Scayt,Blockquote,Anchor,Table'}"
+                                          debounce="500">
+                                </ckeditor>
                             </div>
 
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary fixed-height" [disabled]="!questionVM.form.valid"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span style="padding-left:5px">Ask</span></button>
+                    <button type="submit" class="btn btn-primary fixed-height" [disabled]="!titleName.valid &&!category.valid"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span style="padding-left:5px">Ask</span></button>
                 </div>
             </div>
         </form>
