--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
@@ -21,7 +21,7 @@
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
-            <li><a routerLink="/question">Questions</a></li>
+            <li><a routerLink="/question/home">Questions</a></li>
             <li><a routerLink="/learn">Learn</a></li>
             <li><a routerLink="/project">Project</a></li>
             <li><button class="btn btn-default">Answer</button></li>
