--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -8,7 +8,7 @@
             <div class="article-details">
                 <img class="user-image" src="../../../../images/avatar.png" />
                 <div class="header-info">{{answer.user.name}},{{answer.user.occupassion}}</div>
-                <div class="header-info">{{answer.topics}},{{date.getMonthName(answer.date.getMonth())}} {{answer.date.getDate()}} {{answer.date.getFullYear()}}</div>
+                <div class="header-info">{{answer.topics}}</div>
                 <p class="answer-text">{{answer.answerText}}</p>
             </div>
         </div>
@@ -23,13 +23,17 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">Type answer below..</h4>
             </div>
             <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <ckeditor [(ngModel)]="answer" [ngModelOptions]="{standalone: true}"
+                          [config]="{ removeButtons : 'Outdent,Indent,About,SpecialChar,Styles,Format,Source,NumberedList,BulletedList,Scayt,Blockquote,Anchor,Table'}"
+                          debounce="500">
+                </ckeditor>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary fixed-height" ><span class="glyphicon success" aria-hidden="true"></span><span style="padding-left:5px">Submit</span></button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             </div>
         </div>
 
