Question load by id...Fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
@@ -22,9 +22,12 @@ input, button, select, textarea {
 
 
 a{
-    color: #c00;
     text-decoration: none;
     outline: 0;
+    cursor:pointer;
+}
+a:hover{
+    text-decoration:none;
 }
 
 .text-danger {
