--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,5 +1,5 @@
 ﻿<div *ngFor="let question of questions">
-    <h1>&iquest;{{question.title}}?</h1>
+    <h1><a [routerLink]="['/question/detail',question.id]" >&iquest;{{question.title}}?</a> </h1>
     <button class="btn btn-default" data-toggle="modal" data-target="#myModal"><i class="fa fa-pencil"></i>Answer</button>
         <div class="row">
             <div class="left-border">
