--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
@@ -3,7 +3,7 @@
         <div >
             <div class="question-title">Related Topics</div>
             <div class="question-list">
-                <p *ngFor="let category of categories">{{category.name}}</p>
+                <a [routerLink]="['/question/home',category.id]" *ngFor="let category of categories"> {{category.name}}</a>
             </div>
         </div>
     </div>
