--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,5 +1,8 @@
 ﻿<div *ngFor="let question of questions">
     <h1><a [routerLink]="['/question/detail',question.id]" >&iquest;{{question.title}}?</a> </h1>
+    <div>
+        Categories: <h4 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h4>
+    </div>
     <button class="btn btn-default" data-toggle="modal" data-target="#myModal"><i class="fa fa-pencil"></i>Answer</button>
         <div class="row">
             <div class="left-border">
@@ -7,7 +10,7 @@
             </div>
             <div class="article-details">
                 <img class="user-image" src="../../../../images/avatar.png" />
-                <div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>
+                <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
                 <!--<div class="header-info">{{answer.topics}},{{date.getMonthName(answer.date.getMonth())}} {{answer.date.getDate()}} {{answer.date.getFullYear()}}</div>-->
                 <p [innerHTML]="question.body" class="answer-text"></p>
             </div>
