--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
@@ -1,16 +1,23 @@
-﻿.modal-dialog {
+﻿h4 {
+    display: inline;
+}
+
+.modal-dialog {
     width: 600px;
     margin: 150px auto;
 }
-.btn{
+
+.btn {
     padding: 2px 12px;
     border: 1px solid #bbcadc;
     background-color: #f1f8fb;
     color: #506db6;
 }
- .btn:hover{
-     border-color:#2865a1;
- }
+
+    .btn:hover {
+        border-color: #2865a1;
+    }
+
 .user-image {
     height: 40px;
     width: 40px;
