Profile: edit forms html lay out added for all the routs

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -14,11 +14,11 @@
                 <ul>
                     <li><button class="btn btn-default menu-button" routerLink="/dashboard/editprofile/contact">Contact info</button> </li>
                     <li><button class="btn btn-default menu-button" routerLink="/dashboard/editprofile/biography">Biography</button> </li>
-                    <li><button class="btn btn-default menu-button">Education</button></li>
-                    <li><button class="btn btn-default menu-button">Experience</button></li>
-                    <li><button class="btn btn-default menu-button">Skills</button></li>
-                    <li><button class="btn btn-default menu-button">Practice Areas</button></li>
-                    <li><button class="btn btn-default menu-button">Insight</button></li>
+                    <li><button class="btn btn-default menu-button" routerLink="/dashboard/editprofile/education">Education</button></li>
+                    <li><button class="btn btn-default menu-button" routerLink="/dashboard/editprofile/experience">Experience</button></li>
+                    <li><button class="btn btn-default menu-button" routerLink="/dashboard/editprofile/skill">Skills</button></li>
+                    <li><button class="btn btn-default menu-button" routerLink="/dashboard/editprofile/practice">Practice Areas</button></li>
+                    <li><button class="btn btn-default menu-button" routerLink="/dashboard/editprofile/insight">Insight</button></li>
 
                 </ul>
             </div>
