--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
@@ -1,11 +1,11 @@
 ﻿<div class="row">
-    <h1>Biography</h1>
-    <!--<div class="col-md-6">
-        <label for="email">Tag Line</label>
-        <input type="text" class="form-control" id="email">
+    <div class="form-group col-md-7">
+        <label>TAG LINE</label>
+        <input type="text" [(ngModel)]="biography.tagLine" class="form-control profile-form">
     </div>
-    <div class="col-md-6">
-        <label for="email">Tag Line</label>
-        <input type="text" class="form-control" id="email">
-    </div>-->
+    <!-- =============== -->
+    <div class="col-md-7">
+        <label>ABOUT ME</label>
+        <textarea [(ngModel)]="biography.aboutMe" rows="3" maxlength="3" class="form-control profile-form"></textarea>
+    </div>
 </div>
