--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -1,10 +1,42 @@
-﻿<div class="row">
-    <div class="col-md-6">
-        <label for="email">Tag Line</label>
-        <input type="text" [(ngModel)]="contact.firstName" class="profile-form" >
+﻿<div >
+    <div class="form-group col-md-6">
+        <label>FIRST NAME</label>
+        <input type="text" [(ngModel)]="contact.firstName" class="form-control profile-form" >
     </div>
     <div class="col-md-6">
-        <label for="email">Tag Line</label>
-        <input type="text" [(ngModel)]="contact.lastName" class="profile-form" id="email">
+        <label>LAST NAME</label>
+        <input type="text" [(ngModel)]="contact.lastName" class="form-control profile-form">
+    </div>
+    <!-- ==================== -->
+    <div class="form-group col-md-6">
+        <label>PREFERED E-MAIL</label>
+        <input type="text" [(ngModel)]="contact.firstName" class="form-control profile-form">
+    </div>
+    <div class="col-md-6">
+        <label>PHONE NUMBR</label>
+        <input type="text" [(ngModel)]="contact.lastName" class="form-control profile-form">
+    </div>
+    <!-- ==================== -->
+    <div class="form-group col-md-6">
+        <label>ADDRESS LINE 1</label>
+        <input type="text" [(ngModel)]="contact.firstName" class="form-control profile-form">
+    </div>
+    <div class="col-md-6">
+        <label>ADDRESS LINE 2</label>
+        <input type="text" [(ngModel)]="contact.lastName" class="form-control profile-form">
+    </div>
+    <!-- ==================== -->
+    <div class="form-group col-md-6">
+        <label>COUNTRY</label>
+        <input type="text" [(ngModel)]="contact.firstName" class="form-control profile-form">
+    </div>
+    <div class="col-md-6">
+        <label>REGION</label>
+        <input type="text" [(ngModel)]="contact.lastName" class="form-control profile-form">
+    </div>
+    <!-- ==================== -->
+    <div class="form-group col-md-6">
+        <label>CITY</label>
+        <input type="text" [(ngModel)]="contact.firstName" class="form-control profile-form">
     </div>
 </div>
