--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -6,34 +6,45 @@
 <!-- ===================== -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="myModalLabel">Ask</h4>
+        <form #answerVM="ngForm" class="form-horizontal" role="form">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>                    
+                    <div [hidden]="answerField.valid || answerField.pristine"
+                         class="alert alert-danger">
+                        Please type your answer and then submit!!
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <ckeditor [(ngModel)]="answerText" [ngModelOptions]="{standalone: true}" id="answer"
+                              required name="answerField" #answerField="ngModel"
+                              [config]="{   filebrowserUploadUrl : '/browser/browse/type/all',
+                                           filebrowserImageUploadUrl : '/browser/browse/type/image',
+                              removeButtons : 'Outdent,Indent,About,SpecialChar,Styles,Format,Source,NumberedList,BulletedList,Scayt,Blockquote,Anchor,Table'}"
+                              debounce="500">
+                    </ckeditor>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Save changes</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-secondary">Cancel</button>                    
+                </div>
             </div>
-            <div class="modal-body">
-                <ck-editor></ck-editor>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
+        </form>
     </div>
 </div>
 <!-- =============== -->
 
-<h3>{{question.answers.length}} Answers</h3>
+<h3>{{question.answers?.length}} Answers</h3>
 <div class="row">
     <div class="left-border">
         <img class="image-border" src="../../../../images/border.png" />
     </div>
     <div class="article-details">
         <img class="user-image" src="../../../../images/avatar.png" />
-        <!--<div class="header-info">{{question.user.name}},{{question.user.occupassion}}</div>-->
-        <!--<div class="header-info">{{date.getMonthName(question.date.getMonth())}} {{question.date.getFullYear()}}</div>-->
+        <!--<div class="header-info">{{question?.user?.name}},{{question?.user?.occupassion}}</div>-->
+        <!--<div class="header-info">{{date.getMonthName(question.date?.getMonth())}} {{question.date?.getFullYear()}}</div>-->
         <p class="answer-text">{{question.body}}</p>
         <div class="status-panel">
             <hr />
@@ -44,7 +55,7 @@
             <div class="status-line">{{question.commentCount}}</div>
             <div class="status-line">Leidos</div>
             <a data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                {{question.comments.length}} comments
+                {{question.comments?.length}} comments
             </a>
             <!-- social media icon -->
             <div class="social-icon">
@@ -84,8 +95,8 @@
         </div>
         <div class="article-details" *ngIf="answer">
             <img class="user-image " src="../../../../images/avatar.png" />
-            <div class="header-info">{{answer.user.name}},{{answer.user.occupassion}}</div>
-            <!--<div class="header-info">{{answer.topics}},{{date.getMonthName(answer.date.getMonth())}} {{answer.date.getDate()}} {{answer.date.getFullYear()}}</div>-->
+            <div class="header-info">{{answer.user?.name}},{{answer.user?.occupassion}}</div>
+            <!--<div class="header-info">{{answer.topics}},{{date.getMonthName(answer.date?.getMonth())}} {{answer.date?.getDate()}} {{answer.date?.getFullYear()}}</div>-->
             <p class="answer-text">{{answer.answerText}}</p>
             <div class="status-panel">
                 <hr />
@@ -118,8 +129,8 @@
                         <div class="row">
                             <div class="article-details" *ngIf="comment">
                                 <img class="user-image comment-img" src="../../../../images/avatar.png" />
-                                <!--<div class="header-info">{{comment.user.name}},{{date.getMonthName(comment.time.getMonth())}} {{comment.time.getDate()}} {{comment.time.getFullYear()}}</div>-->
-                                <p class="answer-text">{{comment.commentText}}</p>
+                                <!--<div class="header-info">{{comment?.user?.name}},{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}</div>-->
+                                <p class="answer-text">{{comment?.commentText}}</p>
                             </div>
 
                         </div>
