--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -52,29 +52,31 @@
                 <div class="col-md-3 inactive">(&#x2716;)Insight</div>
             </div>
         </div>
-
-        <div class="info-form">
-            <div class="panel panel-default">
-                <div class="panel-heading">Panel Heading</div>
-                <div class="panel-body">
-                    <router-outlet></router-outlet>
-                    <!--<div class="row">
-                        <div class="col-md-6">
-                            <label for="email">Tag Line</label>
-                            <input type="text" class="form-control" id="email">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="email">Tag Line</label>
-                            <input type="text" class="form-control" id="email">
-                        </div>
-                    </div>-->
+        <form>
+            <div class="info-form">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Panel Heading</div>
+                    <div class="panel-body">
+                        <router-outlet></router-outlet>
+                        <!--<div class="row">
+                    <div class="col-md-6">
+                        <label for="email">Tag Line</label>
+                        <input type="text" class="form-control" id="email">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="email">Tag Line</label>
+                        <input type="text" class="form-control" id="email">
+                    </div>
+                </div>-->
+                    </div>
+                </div>
+                <div class="submit-panel">
+                    <button class="btn btn-default menu-button">Cancel</button>
+                    <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
                 </div>
             </div>
-            <div class="submit-panel">
-                <button class="btn btn-default menu-button" >Cancel</button>
-                <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
-            </div>
-        </div>
+        </form>
+        
     </div>
 </div>
 
