--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/insight.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/insight.component.html
@@ -20,31 +20,34 @@
             <div class="col-md-5">
                 <input type="text" class="form-control profile-form">
             </div>
-            
+
             <div class="col-md-5">
                 <input type="text" class="form-control profile-form">
             </div>
         </div>
         <div class="row">
             <div class="col-md-5">
-                <input type="radio" class="form-control profile-form">
+                <label class="radio-inline">
+                    <input type="radio" name="optradio">Option 1
+                </label>
             </div>
 
             <div class="col-md-5">
-                <input type="radio" class="form-control profile-form">
+                <label class="radio-inline">
+                    <input type="radio" name="optradio">Option 1
+                </label>
             </div>
         </div>
         <div class="row">
-            <input type="text" class="form-control profile-form">
+            <div class="col-md-12">
+                <input type="text" class="form-control profile-form">
+            </div>
         </div>
-
     </div>
     <div class="form-group col-md-6">
         <div class="row">
             <label>DESCRIPTION</label>
             <textarea rows="5" maxlength="3" class="form-control profile-form"></textarea>
         </div>
-
     </div>
-
 </div>
