--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -36,7 +36,7 @@
 </div>
 <!-- =============== -->
 
-<h3>{{question.answers?.length}} Answers</h3>
+
 <div class="row">
     <div class="left-border">
         <img class="image-border" src="../../../../images/border.png" />
@@ -45,7 +45,7 @@
         <img class="user-image" src="../../../../images/avatar.png" />
         <!--<div class="header-info">{{question?.user?.name}},{{question?.user?.occupassion}}</div>-->
         <!--<div class="header-info">{{date.getMonthName(question.date?.getMonth())}} {{question.date?.getFullYear()}}</div>-->
-        <p class="answer-text">{{question.body}}</p>
+        <p class="answer-text" [innerHTML]="question.body"></p>
         <div class="status-panel">
             <hr />
             <img class="like-logo" src="../images/fade-logo.png" />
@@ -87,6 +87,7 @@
     </div>
 </div>
 <hr />
+<h3>{{question.answers?.length}} Answers</h3>
 <!-- =========Answers============== -->
 <div *ngFor="let answer of question.answers">
     <div class="row">
@@ -95,16 +96,15 @@
         </div>
         <div class="article-details" *ngIf="answer">
             <img class="user-image " src="../../../../images/avatar.png" />
-            <div class="header-info">{{answer.user?.name}},{{answer.user?.occupassion}}</div>
-            <!--<div class="header-info">{{answer.topics}},{{date.getMonthName(answer.date?.getMonth())}} {{answer.date?.getDate()}} {{answer.date?.getFullYear()}}</div>-->
-            <p class="answer-text">{{answer.answerText}}</p>
+            <div class="header-info">{{answer.user?.name}},{{answer.user?.occupassion}}</div>           
+            <p class="answer-text" [innerHTML]="answer.text"></p>
             <div class="status-panel">
                 <hr />
                 <img class="like-logo" src="../images/fade-logo.png" />
-                <div class="status-line">{{answer.likeCount}}</div>
+                <div class="status-line">{{answer.likes?.length}}</div>
                 <div class="status-line">Like</div>
                 <div class="status-line like-border"></div>
-                <div class="status-line">{{answer.commentCount}}</div>
+                <div class="status-line">{{answer.comments?.length}}</div>
                 <div class="status-line">Leidos</div>
                 <a data-toggle="collapse" attr.data-target="#answerComment{{answer.id}}" aria-expanded="false" aria-controls="collapseExample">
                     3 comments
