Profile Model created, service hook with profile forms

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
@@ -20,7 +20,7 @@
     <!-- =============== -->
     <div class="form-group col-md-12">
         <div class="row">
-            <div class="col-md-6"><label class="mid-label">COMPLETED STUDIES</label></div>
+            <div class="col-md-6"><label class="mid-label">TIME PERIOD</label></div>
             <div class="col-md-1"><input type="checkbox" class="form-control profile-form" value=""></div>
             <div class="col-md-5"><label class="mid-label">CURRENTLY WORK HERE</label></div>
         </div>
