--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/insight.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/insight.component.html
@@ -28,13 +28,12 @@
         <div class="row">
             <div class="col-md-5">
                 <label class="radio-inline">
-                    <input type="radio" name="optradio">Option 1
-                </label>
+                    <input type="radio" name="optradio">HYPERLINK
             </div>
 
             <div class="col-md-5">
                 <label class="radio-inline">
-                    <input type="radio" name="optradio">Option 1
+                    <input type="radio" name="optradio">UPLOAD DOCUMENT
                 </label>
             </div>
         </div>
