--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="row" >
     <div class="form-group col-md-6">
         <label>FIRST NAME</label>
-        <input type="text" (ngModelChange)="onChangeModel($event)" [(ngModel)]="contact.firstName" class="form-control profile-form" >
+        <input type="text" [(ngModel)]="contact.firstName" class="form-control profile-form" >
     </div>
     <div class="col-md-6">
         <label>LAST NAME</label>
